<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_PartStationState" Id="{17b19a21-545a-44e8-bc25-b69beff206d0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PartStationState :
(
	Idle 			:= 0,
	Starting		:= 1,
	Running			:= 2,
	Stopping		:= 3,
	Stopped			:= 4,
	Aborting		:= 5
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>